Bug 1348259 - Switch nsLanguageAtomService to use OSPreferences::GetSystemLocale. r=m_kato

MozReview-Commit-ID: DvKbtrpfNJe

--HG--
extra : rebase_source : 7a62729ce4251c7cd046449c84f5072ed66cf7c9